# optimisations

./: .gitignore  README.md  cmake.bash  coil_fitter.py  coil_match.py  env.sh  evolve.py  field_models.py  final_cooling_match.py  movie.py
examples/multiharmonic/: README  beam.txt  linac.g4bl  log  output_data.txt
front_end/: fluka_target_isis2.py  g4bl_chicane.py  g4bl_rf_capture.py  g4bl_target_isis2.py  g4bl_target_solenoid.py
front_end/plotting/: plot_longitudinal_capture_performance.py  plot_target_production.py  target_outer_detector_analysis.py  target_yield_analysis.py
g4bl_interface/: g4bl_field_model_wrapper.py  g4bl_final_cooling.py  g4bl_front_end.py  g4bl_interface.py  stripper.py
models/: field_models.py
models/rf_model/: CMakeLists.txt  PulsedRF.cc  PulsedRF.hh  PyPulsedRF.cc
models/solenoid_model/: BLCMDderivativessolenoid.cc  CMakeCache.txt  CMakeLists.txt  DerivativesSolenoid.cc  DerivativesSolenoid.hh  Makefile  PyDerivativesSolenoid.cc  cmake_install.cmake  derivatives_solenoid.cc  derivatives_solenoid.hh  rogers_cmake.bash
models/solenoid_model/test/: test_derivatives_solenoid.py
runners/: amplitudes.py  coil_fitter.py  double_match.py  evolve.py  final_cooling_match.py  gauss_minimiser.py
share/: target_solenoid.tex
test/: test_rf_model.py
utilities/: r_max.py
